# fast-ssim2

./: .gitignore  BENCHMARKS.md  BLUR_BACKEND_EVALUATION.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPROVEMENTS.md  LIBBLUR_EVALUATION.md  PR_DESCRIPTION.md  README.md
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  rust.yml
.superwork/: release-analysis.toml
compare_tool/: Cargo.toml
compare_tool/src/: main.rs
fast-ssim2/: Cargo.toml
fast-ssim2/benches/: benches.rs
fast-ssim2/examples/: benchmark_allocations.rs  benchmark_simd.rs  capture_cpp_reference.rs  feature_benchmark.rs  precompute_benchmark.rs  profile_blur.rs  profile_simd.rs
fast-ssim2/src/: input.rs  lib.rs  precompute.rs  simd_ops.rs  xyb_simd.rs
fast-ssim2/src/blur/: simd_gaussian.rs
fast-ssim2/tests/: implementation_parity.rs  jpeg_quality_reference.rs  reference_parity.rs  simd_consistency.rs
ssimulacra2/: Cargo.toml
ssimulacra2/benches/: benches.rs
ssimulacra2/examples/: benchmark_allocations.rs  benchmark_simd.rs  capture_cpp_reference.rs  profile_simd.rs
ssimulacra2/src/: input.rs  lib.rs  precompute.rs  simd_ops.rs  xyb_simd.rs
ssimulacra2/src/blur/: gaussian.rs  mod.rs  simd_gaussian.rs
ssimulacra2/tests/: implementation_parity.rs  jpeg_quality_reference.rs  reference_parity.rs
ssimulacra2_bin/: Cargo.toml  README.md
ssimulacra2_bin/src/: main.rs  video.rs
