[package]
name = "fast-ssim2"
version = "0.7.3"
edition = "2024"
description = "Fast SSIMULACRA2 image quality metric with SIMD acceleration"
repository = "https://github.com/imazen/fast-ssim2"
homepage = "https://github.com/imazen/fast-ssim2"
documentation = "https://docs.rs/fast-ssim2"
readme = "../README.md"
exclude = [
    "test_data",
    "CLAUDE.md",
    "CONTEXT-HANDOFF.md",
    "FEEDBACK.md",
    ".claude/",
    ".superwork/",
    ".zenbench/",
    "copter-report/",
    "Cross.toml",
    "justfile",
    "Cargo.toml.original.txt",
    "fuzz/",
]
license = "BSD-2-Clause"
keywords = ["image", "quality", "ssim", "ssimulacra2", "perceptual"]
categories = ["multimedia::images", "algorithms"]

# When changing MSRV: Also update README and .github/workflows/rust.yml
rust-version = "1.89.0"

[dependencies]
archmage = { version = "0.9.17", features = ["macros"] }
imgref = { version = "1.12", optional = true }
magetypes = { version = "0.9.17" }
num-traits = "0.2.15"
rayon = { version = "1.5.3", optional = true }
thiserror = "2.0.18"
yuvxyb = "0.5.0"

[build-dependencies.yuvxyb-math]
version = "0.1"

[dev-dependencies]
image = "0.25.10"
rand = "0.10"
chrono = "0.4"
png = "0.18"
which = "8.0"
sha2 = "0.11.0"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
zenbench = { version = "0.1.2", features = ["criterion-compat"] }

[features]
default = []
imgref = ["dep:imgref"]  # Support for imgref image types
rayon = ["dep:rayon"]

[[bench]]
name = "benches"
harness = false

[lints.clippy]
uninlined_format_args = "allow"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("avx512"))'] }
