[package]
name = "fast-ssim2"
version = "0.7.0"
edition = "2024"
description = "Fast SSIMULACRA2 image quality metric with SIMD acceleration"
repository = "https://github.com/imazen/ssimulacra2"
homepage = "https://github.com/imazen/ssimulacra2"
documentation = "https://docs.rs/fast-ssim2"
readme = "../README.md"
exclude = ["test_data"]
license = "BSD-2-Clause"
keywords = ["image", "quality", "ssim", "ssimulacra2", "perceptual"]
categories = ["multimedia::images", "algorithms"]

# When changing MSRV: Also update README and .github/workflows/rust.yml
rust-version = "1.89.0"

[dependencies]
archmage = { version = "0.5", features = ["macros", "safe_unaligned_simd"] }
imgref = { version = "1.12", optional = true }
magetypes = "0.5"
num-traits = "0.2.15"
rayon = { version = "1.5.3", optional = true }
thiserror = "2.0.9"
yuvxyb = "0.4.1"

[build-dependencies.yuvxyb-math]
version = "0.1"

[dev-dependencies]
criterion = "0.5.0"
image = "0.25.0"
rand = "0.8.5"
chrono = "0.4"
png = "0.17"
which = "7.0"
sha2 = "0.10"

[features]
default = []
imgref = ["dep:imgref"]  # Support for imgref image types
rayon = ["dep:rayon"]

[[bench]]
name = "benches"
harness = false

[lints.clippy]
uninlined_format_args = "allow"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("avx512"))'] }
